# chump

./: angular.json  package.json  pnpm-lock.yaml
src/: index.html  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  body.rs  certificate.rs  encoding.rs  hash_tree.rs  main.rs
src-tauri/src/commands/: canister_http_request.rs  mod.rs
src/app/: app.component.html  app.component.ts
src/app/core/: index.ts
src/app/core/canister/: canister.service.spec.ts  canister.service.ts  index.ts
src/app/core/canister-http-request/: canister-http-request.ts  canister-http-response-dto.types.ts  canister-http-response-dto.utils.ts  canister-http-response.types.ts  canister-http-response.utils.ts  index.ts
src/app/core/canister-http-request-form/: canister-http-request-form.component.html  canister-http-request-form.component.spec.ts  canister-http-request-form.component.ts  index.ts
src/app/core/footer/: footer.component.html  footer.component.scss  footer.component.ts  index.ts
src/app/core/hash-tree-node/: hash-tree-node.component.html  hash-tree-node.component.scss  hash-tree-node.component.spec.ts  hash-tree-node.component.ts  index.ts
src/app/core/header/: header.component.html  header.component.ts  index.ts
src/app/core/layout/: index.ts  layout.component.html  layout.component.scss  layout.component.ts
src/app/ui/: index.ts
src/app/ui/button/: button.component.html  button.component.scss  button.component.ts
src/app/ui/container/: container.component.scss
src/app/ui/form-input/: form-input.component.html  form-input.component.scss  form-input.component.spec.ts  form-input.component.ts  index.ts
src/app/ui/form-label/: form-label.component.html  form-label.component.scss  form-label.component.ts  index.ts
src/environments/: environment.ts
