[package]
name = "ic-certificate-explorer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
ic-agent = { path = "../../agent-rs/ic-agent" }
ic-certification = { path = "../../agent-rs/ic-certification" }
ic-utils = { path = "../../agent-rs/ic-utils" }
anyhow = "1.0.69"
flate2 = "1.0.25"
base64 = "0.21.0"
serde_cbor = "0.11.2"
lazy-regex = "2.4.1"
hex = "0.4.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
